# licode

./: .gitignore  licode_config_aws.js  licode_config_vm.js  nginx.conf  notes.txt  package.json
admin/: admin.js  bower.json  index.html
admin/public/css/: style.css
admin/public/js/: main.js  pubsub.js  requirejs-config.js
admin/public/js/components/: charts.jsx  dashboard.jsx  erizo_item.jsx  erizo_list.jsx  erizo_publisher.jsx  host_stats.jsx
admin/public/js/lib/react/: .bower.json
admin/public/js/lib/requirejs-react-jsx/: .bower.json
admin/views/: index.ejs  test.ejs
erizo/: buildProject.sh
erizo/src/: CMakeLists.txt
erizo/src/erizo/: CMakeLists.txt  DtlsTransport.cpp  NiceConnection.cpp  NiceConnection.h  OneToManyProcessor.cpp  SdesTransport.cpp  SdpInfo.cpp  WebRtcConnection.cpp  WebRtcConnection.h  logger.h  rtputils.h
erizo/src/erizo/media/: ExternalOutput.h
erizo/src/erizo/rtp/: RtcpAggregator.cpp  RtcpProcessor.h  RtpExtensionProcessor.cpp  RtpHeaders.h
erizoAPI/: WebRtcConnection.cc
erizo_controller/: installErizo_controller.sh  log4js_configuration.json
erizo_controller/common/: amqper.js
erizo_controller/erizoAgent/: erizoAgent.js  log4cxx.properties
erizo_controller/erizoClient/lib/: socket.io.js
erizo_controller/erizoClient/src/: Connection.js  Room.js  Stream.js
erizo_controller/erizoClient/src/utils/: L.Logger.js
erizo_controller/erizoClient/src/views/: AudioPlayer.js  Bar.js  Speaker.js  VideoPlayer.js
erizo_controller/erizoClient/src/webrtc-stacks/: ChromeCanaryStack.js  ChromeStableStack.js
erizo_controller/erizoClient/tools/: compile.sh  compileDebug.sh
erizo_controller/erizoController/: erizoController.js  roomController.js  webRtcController.js
erizo_controller/erizoController/rpc/: rpc.js  rpcPublic.js
erizo_controller/erizoJS/: erizoJSController.js
extras/basic_example/public/: nuveServiceConfig.json  quality_layers_seminar.html  quality_layers_seminar.js  script.js
nuve/: installNuve.sh  log4js_configuration.json
nuve/nuveAPI/: cloudHandler.js  newrelic.js  nuve.js  nuve_threaded.js
nuve/nuveAPI/auth/: nuveAuthenticator.js
nuve/nuveAPI/resource/: tokensResource.js
nuve/nuveClient/tools/: compile.sh  compileDist.sh
scripts/: buildAll.sh  initLicode.sh  installBasicExample.sh  installErizo.sh  installLicodeMinerva.sh  installMacDeps.sh  installNuve.sh  installUbuntuDeps.sh  installUbuntuDepsUnattended.sh  licode_default.js  minerva_nuve.patch0  rtp_media_config_minerva.js  travisInstallDeps.sh
scripts/minerva/: erizo_log4cxx.properties  licode_default.js  nuve_log4js_configuration.json
supervisor/: basic_example_service.sh  erizo_agent_service.sh  erizo_controller_service.sh  nuve_service.sh  restart.sh
